# SBOM-Generator

./: pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json  setup.sh
.github/: dependabot.yml
configs/: committee-1.yml  npm-1.yml  ruby-1.yml
sboms/: server-lock.cdx.json
src/sbom_generator/: main.py
src/sbom_generator/execution/: __init__.py  sources.py  targets.py
src/sbom_generator/models/: __init__.py  configuration.py
src/sbom_generator/schemas/: generation-1.schema _ruby_backup.json  generation-1.schema.json
src/sbom_generator/validation/: __init__.py  sources.py  targets.py
